flux/apps/hoyeslab/default/httpbin/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-tailscale
  namespace: default
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: httpbin
      port:
        name: http
  tls:
    - hosts:
        - httpbin

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ts-hoyes-dev
  namespace: default
spec:
  ingressClassName: nginx-tailscale
  rules:
    - host: httpbin.ts.hoyes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  name: http
  tls:
    - hosts:
        - httpbin.ts.hoyes.dev
      secretName: ts-hoyes-dev-tls
